# Safecoin-Metaplex

./: .gitignore  404.html  ARCHITECTURE.md  CNAME  README.md  index.html
_next/static/V0qkvZoKB2TGQd5m39xAh/: _buildManifest.js
js/: .eslintcache  .gitignore  README.md.bak  README.md.bak.bak  package.json
js/Metaplex-program-library/: Anchor.toml  Cargo.toml
js/Metaplex-program-library/auction-house/program/: Cargo.toml
js/Metaplex-program-library/auction-house/program/src/: lib.rs  utils.rs
js/Metaplex-program-library/auction-house/program/tests/: cancel.rs  create_auction_house.rs  sell.rs
js/Metaplex-program-library/auction-house/program/tests/utils/: setup_functions.rs
js/Metaplex-program-library/core/rust/testing-utils/: Cargo.toml
js/Metaplex-program-library/core/rust/testing-utils/src/: lib.rs  safecoin.rs
js/Metaplex-program-library/core/rust/testing-utils/src/utils/: edition_marker.rs  external_price.rs  master_edition_v2.rs  metadata.rs  mod.rs  vault.rs
js/Metaplex-program-library/gumdrop/program/: Cargo.toml
js/Metaplex-program-library/gumdrop/program/src/: lib.rs  merkle_proof.rs
js/Metaplex-program-library/metaplex/program/: Cargo.toml  README.md
js/Metaplex-program-library/metaplex/program/src/: deprecated_state.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
js/Metaplex-program-library/metaplex/program/src/processor/: claim_bid.rs  decommission_auction_manager.rs  deprecated_populate_participation_printing_account.rs  deprecated_validate_participation.rs  deprecated_validate_safety_deposit_box_v1.rs  empty_payment_account.rs  end_auction.rs  init_auction_manager_v2.rs  redeem_bid.rs  redeem_full_rights_transfer_bid.rs  redeem_participation_bid.rs  redeem_printing_v2_bid.rs  set_auction_cache.rs  set_store.rs  set_store_index.rs  start_auction.rs  validate_safety_deposit_box_v2.rs  withdraw_master_edition.rs
js/Metaplex-program-library/nft-candy-machine/program/: Cargo.toml
js/Metaplex-program-library/nft-candy-machine/program/src/: lib.rs  utils.rs
js/Metaplex-program-library/nft-packs/program/: Cargo.toml  README.md
js/Metaplex-program-library/nft-packs/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  math.rs  processor.rs  utils.rs
js/Metaplex-program-library/nft-packs/program/src/processor/: activate.rs  add_card_to_pack.rs  add_voucher_to_pack.rs  change_authority.rs  claim_pack.rs  clean_up.rs  close_pack.rs  deactivate.rs  delete_pack.rs  delete_pack_card.rs  delete_pack_config.rs  delete_pack_voucher.rs  edit_pack.rs  init_pack.rs  request_card_to_redeem.rs
js/Metaplex-program-library/nft-packs/program/src/state/: mod.rs  pack_card.rs  pack_config.rs  pack_set.rs  pack_voucher.rs  proving_process.rs
js/Metaplex-program-library/token-entangler/program/: Cargo.toml
js/Metaplex-program-library/token-entangler/program/src/: lib.rs  utils.rs
js/Metaplex-program-library/token-metadata/program/: Cargo.toml
js/Metaplex-program-library/token-metadata/program/src/: deprecated_instruction.rs  deprecated_processor.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs  utils.rs  utils_test.rs
js/Metaplex-program-library/token-metadata/program/src/assertions/: collection.rs  uses.rs
js/Metaplex-program-library/token-metadata/test/: Cargo.toml
js/Metaplex-program-library/token-metadata/test/src/: main.rs
js/Metaplex-program-library/token-vault/test/: Cargo.toml
js/Metaplex-program-library/token-vault/test/src/: main.rs
ledamint-program-library/: .base-ammanrc.js  README.md  package.json
rust/: Anchor.toml  Cargo.toml  ETYJgForS5jHu7C1Pkcu9TqnnLnHiU3kMxKajd1v3WHn  package.json  patch.crates-io.sh  update-safecoin-dependencies.sh
rust/auction-house/: Cargo.toml
rust/auction-house/src/: lib.rs  utils.rs
rust/auction/program/: Cargo.toml  README.md
rust/auction/program/src/: entrypoint.rs  errors.rs  instruction.rs  lib.rs  processor.rs  utils.rs
rust/auction/program/src/processor/: cancel_bid.rs  claim_bid.rs  create_auction.rs  create_auction_v2.rs  end_auction.rs  place_bid.rs  set_authority.rs  start_auction.rs
rust/auction/program/tests/: helpers.rs  lib.rs
rust/ci/: cargo-build-test.sh  install-program-deps.sh  rust-version.sh  safecoin-version.sh  solana-version.sh
rust/fair-launch/: Cargo.toml
rust/fair-launch/src/: lib.rs  utils.rs
rust/gumdrop/: Cargo.toml
rust/gumdrop/src/: lib.rs
rust/metaplex/program/: Cargo.toml  README.md
rust/metaplex/program/src/: deprecated_state.rs  entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
rust/metaplex/program/src/processor/: claim_bid.rs  decommission_auction_manager.rs  deprecated_init_auction_manager_v1.rs  deprecated_populate_participation_printing_account.rs  deprecated_validate_participation.rs  deprecated_validate_safety_deposit_box_v1.rs  empty_payment_account.rs  end_auction.rs  init_auction_manager_v2.rs  redeem_bid.rs  redeem_full_rights_transfer_bid.rs  redeem_participation_bid.rs  redeem_printing_v2_bid.rs  redeem_unused_winning_config_items_as_auctioneer.rs  set_auction_cache.rs  set_store.rs  set_whitelisted_creator.rs  start_auction.rs  validate_safety_deposit_box_v2.rs  withdraw_master_edition.rs
rust/metaplex/test/: Cargo.toml
rust/migrations/: deploy.js
rust/nft-candy-machine/: Cargo.toml
rust/nft-candy-machine/src/: lib.rs  utils.rs
rust/test/: nft-candy-machine.ts
rust/token-entangler/: Cargo.toml
rust/token-metadata/program/: Cargo.toml  README.md
rust/token-metadata/program/src/: deprecated_instruction.rs  deprecated_processor.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs  utils_test.rs
rust/token-metadata/program/tests/: create_master_edition.rs  create_metadata_account.rs  mint_new_edition_from_master_edition_via_token.rs  mint_new_edition_from_master_edition_via_vault_proxy.rs  update_metadata_account.rs  update_primary_sale_happened_via_token.rs
rust/token-metadata/program/tests/utils/: edition_marker.rs  external_price.rs  master_edition_v2.rs  metadata.rs  mod.rs  vault.rs
(+222 files in other folders)
