[package]
name = "metaplex-auction-house"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "metaplex_auction_house"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies]
thiserror = "1.0"
arrayref = "0.3.6"

  [dependencies.anchor-lang]
  path = "../../../bh-anchor/lang"
  
  [dependencies.anchor-spl]
  path = "../../../bh-anchor/spl"

  [dependencies.safe-associated-token-account]
  path = "../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.metaplex-token-metadata]
  path = "../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../safecoin-program-library/token/program"
