[package]
name = "fair-launch"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "fair_launch"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies]
arrayref = "0.3.6"

  [dependencies.anchor-lang]
  path = "../../../bh-anchor/lang"
  
  [dependencies.anchor-spl]
  path = "../../../bh-anchor/spl"
  
  [dependencies.safe-associated-token-account]
  path = "../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.metaplex-token-metadata]
  path = "../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../safecoin-program-library/token/program"

 [dependencies.safecoin-program]
  path = "../../../Safecoin/sdk/program"
  version = "^1.7.17"

