[package]
name = "metaplex-auction"
version = "0.0.1"
description = "Solana Auction Program"
authors = [ "Metaplex Maintainers <maintainers@metaplex.com>" ]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
exclude = [ "tests/**" ]

[features]
no-entrypoint = [ ]
test-bpf = [ ]

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
thiserror = "1.0"

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

[dev-dependencies.safecoin-program-test]
path = "../../../../Safecoin/program-test"

[dev-dependencies.safecoin-sdk]
path = "../../../../Safecoin/sdk"

[lib]
crate-type = [ "cdylib", "lib" ]
