[package]
name = "mpl-auction-house"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]
test-bpf = [ ]

[dependencies]
thiserror = "1.0"
arrayref = "0.3.6"

  [dependencies.anchor-lang]
  path = "../../../bh-anchor/lang"
  
  [dependencies.anchor-spl]
  path = "../../../bh-anchor/spl"

  [dependencies.safe-associated-token-account]
  path = "../../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-metadata]
  path = "../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

[dev-dependencies]

shellexpand = "2.1.0"
serde_json = "1.0"
env_logger = "0.9.0"

  [dependencies.anchor-client]
   path = "../../../bh-anchor/client"
   
  [dev-dependencies.mpl-testing-utils]
  path = "../../core/rust/testing-utils"
  version = "0.0.1"

  [dev-dependencies.safecoin-program-test]
  path = "../../../../Safecoin/program-test"

  [dev-dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dev-dependencies.safecoin-sdk]
  path = "../../../../Safecoin/sdk"
