[package]
name = "mpl_gumdrop"
version = "0.0.1"
description = "A safecoin program for distributing tokens and NFTs according to a Merkle root."
authors = [ "Lawrence Wu <larry.wu@safecoin.com>" ]
keywords = [ "safecoin" ]
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "mpl_gumdrop"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies]

  [dependencies.anchor-lang]
  path = "../../../bh-anchor/lang"
  
  [dependencies.anchor-spl]
  path = "../../../bh-anchor/spl"

  [dependencies.safe-associated-token-account]
  path = "../../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-metadata]
  path = "../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"
