[package]
name = "mpl-metaplex"
version = "0.0.1"
description = "Metaplex"
authors = [ "Metaplex Maintainers <maintainers@metaplex.com>" ]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = [ ]
test-bpf = [ ]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
thiserror = "1.0"
borsh = "0.9.1"

  [dependencies.mpl-auction]
  path = "../../auction/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-vault]
  path = "../../token-vault/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-metadata]
  path = "../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

[dev-dependencies.safecoin-sdk]
path = "../../../../Safecoin/sdk"

[dev-dependencies.safecoin-program-test]
path = "../../../../Safecoin/program-test"

[lib]
crate-type = [ "cdylib", "lib" ]
