[package]
name = "nft-candy-machine"
version = "2.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = [ "cdylib", "lib" ]
name = "nft_candy_machine"

[features]
no-entrypoint = [ ]
no-idl = [ ]
cpi = [ "no-entrypoint" ]
default = [ ]

[dependencies]
arrayref = "0.3.6"


   [dependencies.anchor-lang]
  path = "../../../bh-anchor/lang"
  
  [dependencies.anchor-spl]
  path = "../../../bh-anchor/spl"

  [dependencies.mpl-token-metadata]
  path = "../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-associated-token-account]
  path = "../../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-gateway]
  git = "https://github.com/identity-com/on-chain-identity-gateway"
  rev = "2d195dcd33bcd1a26b09d79ee90cc6f7282c87aa"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"
