[package]
name = "mpl-nft-packs"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = [ ]
test-bpf = [ ]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
borsh = "0.9.1"

  [dependencies.spl-math]
  path = "../../../../safecoin-program-library/libraries/math"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-metaplex]
  path = "../../metaplex/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-metadata]
  path = "../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-vault]
  path = "../../token-vault/program"
  features = [ "no-entrypoint" ]

  [dependencies.randomness-oracle-program]
  git = "https://github.com/metaplex/randomness-oracle"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

[dev-dependencies.rand]
version = "0.8.4"

[dev-dependencies.safecoin-program-test]
path = "../../../../Safecoin/program-test"

[dev-dependencies.safecoin-sdk]
path = "../../../../Safecoin/sdk"

[lib]
crate-type = [ "cdylib", "lib" ]
