[package]
name = "mpl-token-metadata"
version = "1.1.0"
description = "Metaplex Metadata"
authors = [ "Metaplex Maintainers <maintainers@metaplex.com>" ]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = [ ]
test-bpf = [ ]

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
thiserror = "1.0"
borsh = "0.9.1"

  [dependencies.mpl-token-vault]
  path = "../../token-vault/program"
  features = [ "no-entrypoint" ]

  [dependencies.safe-associated-token-account]
  path = "../../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"

[dev-dependencies.safecoin-sdk]
path = "../../../../Safecoin/sdk"

[dev-dependencies.safecoin-program-test]
path = "../../../../Safecoin/program-test"

[lib]
crate-type = [ "cdylib", "lib" ]
