[package]
name = "metaplex-token-vault-test-client"
version = "0.1.0"
description = "Metaplex Library Fraction Test Client"
authors = [ "Metaplex Maintainers <maintainers@metaplex.com>" ]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
bincode = "1.3.3"
borsh = "0.9.1"
clap = "2.33.3"

  [dependencies.metaplex-token-vault]
  package = "mpl-token-vault"
  path = "../program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-client]
  path = "../../../../Safecoin/client"

  [dependencies.safecoin-program]
  path = "../../../../Safecoin/sdk/program"

  [dependencies.safecoin-sdk]
  path = "../../../../Safecoin/sdk"

  [dependencies.safecoin-clap-utils]
  path = "../../../../Safecoin/clap-utils"

  [dependencies.safecoin-cli-config]
  path = "../../../../Safecoin/cli-config"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../safecoin-program-library/token/program"
