[package]
name = "mpl-testing-utils"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = [ "lib" ]
path = "src/lib.rs"

[dependencies]
shellexpand = "2.1.0"
serde_json = "1.0"
rand = "0.7.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.1"

  [dependencies.safe-associated-token-account]
  path = "../../../../../safecoin-program-library/associated-token-account/program"
  features = [ "no-entrypoint" ]

  [dependencies.anchor-client]
  path = "../../../../bh-anchor/client"
  
  [dependencies.mpl-token-metadata]
  path = "../../../token-metadata/program"
  features = [ "no-entrypoint" ]

  [dependencies.mpl-token-vault]
  path = "../../../token-vault/program"
  features = [ "no-entrypoint" ]

  [dependencies.safecoin-program-test]
  path = "../../../../../Safecoin/program-test"

  [dependencies.safecoin-program]
  path = "../../../../../Safecoin/sdk/program"

  [dependencies.safecoin-sdk]
  path = "../../../../../Safecoin/sdk"

  [dependencies.safe-token]
  features = [ "no-entrypoint" ]
  path = "../../../../../safecoin-program-library/token/program"
